--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -14,5 +14,5 @@
         <button type="submit" class="btn btn-primary mb-3">Stem</button>
     </form>
         <p></p>
-    <a href="{% url 'polls:results' poll.id %}">Bekijk de resultaten</a>
+    <a class="link" href="{% url 'polls:results' poll.id %}">Bekijk de resultaten</a>
 {% endblock %}
