--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -6,7 +6,7 @@
     <h2>Laatste stemmingen</h2>
     <ul>
         {% for poll in latest_poll_list %}
-            <li><a href="{% url 'polls:detail' poll.id %}">{{ poll.question }}</a></li>
+            <li><a class="link" href="{% url 'polls:detail' poll.id %}">{{ poll.question }}</a></li>
         {% endfor %}
     </ul>
 {% endblock %}
