--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -7,11 +7,13 @@
     <form action="{% url 'polls:vote' poll.id %}" method="post">
         {% csrf_token %}
         {% for choice in poll.choice_set.all %}
+        <div class="form-check">
             <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
             <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+        </div>
         {% endfor %}
         <p></p> 
-        <button type="submit" class="btn btn-primary mb-3">Stem</button>
+        <button type="submit" class="btn btn-warning mb-3">Stem</button>
     </form>
         <p></p>
     <a class="link" href="{% url 'polls:results' poll.id %}">Bekijk de resultaten</a>
